--- a/aaaa.html
+++ b/aaaa.html
@@ -9,7 +9,7 @@
 			名字：<input ng-model="name"><br/>
 			{{name}}
 		</div>
-	</body>
+	</body>dddd
 	<script>
 		var app = angular.module('myApp',[]);
 		app.controller('myCtrl',function($scope){
